--- a/index.html
+++ b/index.html
@@ -8,15 +8,9 @@
   <meta name="theme-color" content="#020617" />
   <meta name="description" content="HarDil – Family First · One Place for Everything" />
 
-  <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css">
 
-  <!-- Splash -->
   <script>
     try {
       if (sessionStorage.getItem("harDilSplash") !== "done") {
@@ -28,16 +22,15 @@
 
 <body>
 
-<!-- ===== TOP BAR ===== -->
 <header class="top-app-bar">
-  <span class="top-app-title">HarDil</span>
+  <span class="top-app-title">❤️ HarDil</span>
   <span class="menu-icon" id="openMenu">☰</span>
 </header>
 
-<!-- ===== SIDE DRAWER ===== -->
+<!-- DRAWER -->
 <aside class="drawer" id="drawer">
   <div class="drawer-header">
-    <h2>HarDil</h2>
+    <strong>HarDil</strong>
     <button id="closeMenu">✕</button>
   </div>
 
@@ -54,72 +47,64 @@
     <a href="#health">🩺 Health</a>
     <a href="#sports">🏏 Sports</a>
     <a href="#learning">🧠 Learning</a>
-
     <h4>About</h4>
-    <a href="about.html">ℹ️ About HarDil</a>
-    <a href="about.html#story">❤️ Our Story</a>
-    <a href="about.html#motive">🎯 Motive & Vision</a>
-
-    <h4>Legal</h4>
-    <a href="privacy.html">🔒 Privacy Policy</a>
-    <a href="terms.html">📜 Terms & Conditions</a>
-    <a href="legal.html">⚖️ Legal Disclaimer</a>
+    <a href="about.html">About HarDil</a>
+    <a href="privacy.html">Privacy Policy</a>
+    <a href="terms.html">Terms & Conditions</a>
+    <a href="legal.html">Legal</a>
 
     <h4>Support</h4>
-    <a href="mailto:aghari128@gmail.com">📩 Contact Us</a>
+    <a href="mailto:aghari128@gmail.com">Contact</a>
   </div>
 </aside>
 
 <div class="backdrop" id="backdrop"></div>
 
-<!-- ===== HERO ===== -->
-<header class="hero">
-  <div class="brand">
-    <div class="heart"></div>
-    <h1>HarDil</h1>
-  </div>
+<section class="hero">
+  <h1>HarDil</h1>
   <p>Family First · One Place for Everything</p>
-</header>
+</section>
 
-<!-- ===== MAIN ===== -->
 <main class="app">
 
 <!-- SOCIAL -->
 <section class="card" id="social">
-  <h2>🌐 Social Media</h2>
+  <h2>🌐 Social</h2>
   <div class="grid">
     <div class="app-btn" data-url="https://web.whatsapp.com"><img src="assets/icons/whatsapp.png"><span>WhatsApp</span></div>
-    <div class="app-btn" data-url="https://www.instagram.com"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
-    <div class="app-btn" data-url="https://mail.google.com"><img src="assets/icons/gmail.png"><span>Gmail</span></div>
-    <div class="app-btn" data-url="https://web.telegram.org"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
-    <div class="app-btn" data-url="https://www.facebook.com"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
+    <div class="app-btn" data-url="https://instagram.com"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
+    <div class="app-btn" data-url="https://facebook.com"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
     <div class="app-btn" data-url="https://twitter.com"><img src="assets/icons/twitter.png"><span>Twitter (X)</span></div>
+    <div class="app-btn" data-url="https://web.telegram.org"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
+    <div class="app-btn" data-url="https://snapchat.com"><img src="assets/icons/snapchat.png"><span>Snapchat</span></div>
+    <div class="app-btn" data-url="https://discord.com"><img src="assets/icons/discord.png"><span>Discord</span></div>
   </div>
 </section>
 
 <!-- JOBS -->
 <section class="card" id="jobs">
-  <h2>💼 Jobs & Career</h2>
+  <h2>💼 Jobs</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://www.linkedin.com/jobs"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
-    <div class="app-btn" data-url="https://www.naukri.com"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
-    <div class="app-btn" data-url="https://www.indeed.com"><img src="assets/icons/indeed.png"><span>Indeed</span></div>
-    <div class="app-btn" data-url="https://www.glassdoor.com"><img src="assets/icons/glassdoor.png"><span>Glassdoor</span></div>
+    <div class="app-btn" data-url="https://linkedin.com/jobs"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
+    <div class="app-btn" data-url="https://naukri.com"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
+    <div class="app-btn" data-url="https://indeed.com"><img src="assets/icons/indeed.png"><span>Indeed</span></div>
+    <div class="app-btn" data-url="https://glassdoor.com"><img src="assets/icons/glassdoor.png"><span>Glassdoor</span></div>
     <div class="app-btn" data-url="https://internshala.com"><img src="assets/icons/internshala.png"><span>Internshala</span></div>
     <div class="app-btn" data-url="https://unstop.com"><img src="assets/icons/unstop.png"><span>Unstop</span></div>
-    <div class="app-btn" data-url="https://www.shine.com"><img src="assets/icons/shine.png"><span>Shine</span></div>
-    <div class="app-btn" data-url="https://cutshort.io"><img src="assets/icons/cutshort.png"><span>CutShort</span></div>
+    <div class="app-btn" data-url="https://foundit.in"><img src="assets/icons/foundit.png"><span>Foundit</span></div>
   </div>
 </section>
 
 <!-- OTT -->
 <section class="card" id="ott">
-  <h2>🎬 OTT Platforms</h2>
+  <h2>🎬 OTT</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://www.netflix.com"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
-    <div class="app-btn" data-url="https://www.primevideo.com"><img src="assets/icons/prime.png"><span>Prime Video</span></div>
-    <div class="app-btn" data-url="https://www.hotstar.com"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
-    <div class="app-btn" data-url="https://www.youtube.com"><img src="assets/icons/youtube.png"><span>YouTube</span></div>
+    <div class="app-btn" data-url="https://netflix.com"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
+    <div class="app-btn" data-url="https://primevideo.com"><img src="assets/icons/prime.png"><span>Prime Video</span></div>
+    <div class="app-btn" data-url="https://hotstar.com"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
+    <div class="app-btn" data-url="https://sonyLIV.com"><img src="assets/icons/sonyliv.png"><span>Sony LIV</span></div>
+    <div class="app-btn" data-url="https://zee5.com"><img src="assets/icons/zee5.png"><span>Zee5</span></div>
+    <div class="app-btn" data-url="https://voot.com"><img src="assets/icons/voot.png"><span>Voot</span></div>
   </div>
 </section>
 
@@ -131,11 +116,12 @@
     <div class="app-btn" data-url="https://music.youtube.com"><img src="assets/icons/youtubemusic.png"><span>YouTube Music</span></div>
     <div class="app-btn" data-url="https://gaana.com"><img src="assets/icons/gaana.png"><span>Gaana</span></div>
     <div class="app-btn" data-url="https://jiosaavn.com"><img src="assets/icons/jiosaavn.png"><span>JioSaavn</span></div>
+    <div class="app-btn" data-url="https://wynk.in"><img src="assets/icons/wynk.png"><span>Wynk</span></div>
   </div>
 </section>
 
 <!-- SHOPPING -->
-<section class="card" id="shop">
+<section class="card" id="shopping">
   <h2>🛒 Shopping</h2>
   <div class="grid">
     <div class="app-btn" data-url="https://amazon.in"><img src="assets/icons/amazon.png"><span>Amazon</span></div>
@@ -143,18 +129,70 @@
     <div class="app-btn" data-url="https://myntra.com"><img src="assets/icons/myntra.png"><span>Myntra</span></div>
     <div class="app-btn" data-url="https://ajio.com"><img src="assets/icons/ajio.png"><span>Ajio</span></div>
     <div class="app-btn" data-url="https://meesho.com"><img src="assets/icons/meesho.png"><span>Meesho</span></div>
+    <div class="app-btn" data-url="https://tatacliq.com"><img src="assets/icons/tatacliq.png"><span>Tata CLiQ</span></div>
   </div>
 </section>
 
 <!-- TRAVEL -->
 <section class="card" id="travel">
-  <h2>✈️ Travel & Booking</h2>
+  <h2>✈️ Travel</h2>
   <div class="grid">
-    <div class="app-btn" data-url="https://www.irctc.co.in"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
+    <div class="app-btn" data-url="https://irctc.co.in"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
     <div class="app-btn" data-url="https://makemytrip.com"><img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span></div>
     <div class="app-btn" data-url="https://goibibo.com"><img src="assets/icons/goibibo.png"><span>Goibibo</span></div>
-    <div class="app-btn" data-url="https://booking.com"><img src="assets/icons/booking.png"><span>Booking.com</span></div>
-    <div class="app-btn" data-url="https://www.redbus.in"><img src="assets/icons/redbus.png"><span>RedBus</span></div>
+    <div class="app-btn" data-url="https://booking.com"><img src="assets/icons/booking.png"><span>Booking</span></div>
+    <div class="app-btn" data-url="https://airbnb.com"><img src="assets/icons/airbnb.png"><span>Airbnb</span></div>
+  </div>
+</section>
+
+<!-- RIDES -->
+<section class="card" id="rides">
+  <h2>🚕 Rides</h2>
+  <div class="grid">
+    <div class="app-btn" data-url="https://uber.com"><img src="assets/icons/uber.png"><span>Uber</span></div>
+    <div class="app-btn" data-url="https://olacabs.com"><img src="assets/icons/ola.png"><span>Ola</span></div>
+    <div class="app-btn" data-url="https://rapido.bike"><img src="assets/icons/rapido.png"><span>Rapido</span></div>
+  </div>
+</section>
+
+<!-- FOOD -->
+<section class="card" id="food">
+  <h2>🍔 Food</h2>
+  <div class="grid">
+    <div class="app-btn" data-url="https://zomato.com"><img src="assets/icons/zomato.png"><span>Zomato</span></div>
+    <div class="app-btn" data-url="https://swiggy.com"><img src="assets/icons/swiggy.png"><span>Swiggy</span></div>
+    <div class="app-btn" data-url="https://dominos.co.in"><img src="assets/icons/dominos.png"><span>Domino’s</span></div>
+    <div class="app-btn" data-url="https://pizzahut.co.in"><img src="assets/icons/pizzahut.png"><span>Pizza Hut</span></div>
+  </div>
+</section>
+
+<!-- HEALTH -->
+<section class="card" id="health">
+  <h2>🩺 Health</h2>
+  <div class="grid">
+    <div class="app-btn" data-url="https://1mg.com"><img src="assets/icons/1mg.png"><span>Tata 1mg</span></div>
+    <div class="app-btn" data-url="https://pharmeasy.in"><img src="assets/icons/pharmeasy.png"><span>PharmEasy</span></div>
+    <div class="app-btn" data-url="https://practo.com"><img src="assets/icons/practo.png"><span>Practo</span></div>
+    <div class="app-btn" data-url="https://apollo247.com"><img src="assets/icons/apollo.png"><span>Apollo 24/7</span></div>
+  </div>
+</section>
+
+<!-- SPORTS -->
+<section class="card" id="sports">
+  <h2>🏏 Sports</h2>
+  <div class="grid">
+    <div class="app-btn" data-url="https://cricbuzz.com"><img src="assets/icons/cricbuzz.png"><span>Cricbuzz</span></div>
+    <div class="app-btn" data-url="https://hotstar.com/sports"><img src="assets/icons/hotstar.png"><span>Hotstar Sports</span></div>
+  </div>
+</section>
+
+<!-- LEARNING -->
+<section class="card" id="learning">
+  <h2>🧠 Learning</h2>
+  <div class="grid">
+    <div class="app-btn" data-url="https://coursera.org"><img src="assets/icons/coursera.png"><span>Coursera</span></div>
+    <div class="app-btn" data-url="https://udemy.com"><img src="assets/icons/udemy.png"><span>Udemy</span></div>
+    <div class="app-btn" data-url="https://khanacademy.org"><img src="assets/icons/khanacademy.png"><span>Khan Academy</span></div>
   </div>
 </section>
 
@@ -162,31 +200,25 @@
 
 <footer class="footer">
   HarDil redirects users only to official websites.<br>
-  No logins · No payments · Family First.
+  No logins · No payments · Family First ❤️
 </footer>
 
-<!-- ===== SCRIPTS ===== -->
 <script>
   const drawer = document.getElementById("drawer");
   const backdrop = document.getElementById("backdrop");
 
-  document.getElementById("openMenu").onclick = () => {
+  openMenu.onclick = () => {
     drawer.classList.add("open");
     backdrop.classList.add("show");
   };
 
-  document.getElementById("closeMenu").onclick = closeDrawer;
-  backdrop.onclick = closeDrawer;
-
-  function closeDrawer() {
+  closeMenu.onclick = backdrop.onclick = () => {
     drawer.classList.remove("open");
     backdrop.classList.remove("show");
-  }
+  };
 
   document.querySelectorAll(".app-btn").forEach(btn => {
-    btn.addEventListener("click", () => {
-      window.open(btn.dataset.url, "_blank", "noopener,noreferrer");
-    });
+    btn.onclick = () => window.open(btn.dataset.url, "_blank", "noopener");
   });
 </script>
 
