--- a/splash.html
+++ b/splash.html
@@ -25,7 +25,7 @@ body {
 .splash-bg {
   position: fixed;
   inset: 0;
-  background: url("assets/images/hd-bg.jpg") center/cover no-repeat;
+  background: url("assets/images/splash-bg.jpg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
