--- a/splash.html
+++ b/splash.html
@@ -63,11 +63,11 @@ body {
   font-size: 7.6rem;
   font-weight: 900;
   letter-spacing: 6px;
-  color: #ffffff;                 /* FULL WHITE */
+  color: #ffffff;
   text-shadow:
-    0 0 18px rgba(236,72,153,0.8),
+    0 0 18px rgba(236,72,153,0.85),
     0 0 40px rgba(236,72,153,0.6),
-    0 0 70px rgba(236,72,153,0.45); /* PINK GLOW */
+    0 0 70px rgba(236,72,153,0.45);
   opacity: 0;
   transform: scale(0.5);
   animation: logoReveal 1.4s ease forwards;
@@ -75,9 +75,14 @@ body {
 }
 
 .tagline {
-  margin-top: 12px;
-  font-size: 1rem;
-  color: #e5e7eb;
+  margin-top: 16px;
+  font-size: 1.35rem; /* INCREASED */
+  font-weight: 500;
+  color: #ffffff;
+  text-align: center;
+  text-shadow:
+    0 0 12px rgba(236,72,153,0.7),
+    0 0 28px rgba(236,72,153,0.5);
   opacity: 0;
   animation: fadeUp 1s ease forwards;
   animation-delay: 2.6s;
@@ -111,9 +116,12 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  font-size: 1.6rem;
+  font-size: 2.2rem; /* INCREASED */
   transform: translate(135px, -50%);
-  filter: drop-shadow(0 0 14px rgba(255,255,255,0.4));
+  color: #ffffff;
+  text-shadow:
+    0 0 10px rgba(236,72,153,0.75),
+    0 0 22px rgba(236,72,153,0.55);
 }
 
 /* ========= ANIMATIONS ========= */
@@ -124,7 +132,7 @@ body {
 }
 
 @keyframes fadeUp {
-  from { opacity: 0; transform: translateY(10px); }
+  from { opacity: 0; transform: translateY(12px); }
   to { opacity: 1; transform: translateY(0); }
 }
 
