--- a/splash.html
+++ b/splash.html
@@ -62,11 +62,12 @@ body {
 .logo {
   font-size: 9.2rem;
   font-weight: 900;
-  color: #fff;
+  letter-spacing: 6px;
+  color: #ffffff;
   text-shadow:
     0 0 25px rgba(236,72,153,0.9),
-    0 0 55px rgba(236,72,153,0.7),
-    0 0 95px rgba(236,72,153,0.5);
+    0 0 55px rgba(236,72,153,0.75),
+    0 0 95px rgba(236,72,153,0.55);
   opacity: 0;
   transform: scale(0.45);
   animation: logoReveal 1.4s ease forwards;
@@ -76,16 +77,19 @@ body {
 .tagline {
   margin-top: 20px;
   font-size: 1.75rem;
-  color: #fff;
+  font-weight: 600;
+  color: #ffffff;
+  text-align: center;
   text-shadow:
-    0 0 16px rgba(236,72,153,0.8),
-    0 0 40px rgba(236,72,153,0.6);
+    0 0 16px rgba(236,72,153,0.85),
+    0 0 40px rgba(236,72,153,0.65),
+    0 0 70px rgba(236,72,153,0.45);
   opacity: 0;
   animation: fadeUp 1s ease forwards;
   animation-delay: 2.6s;
 }
 
-/* ========= ORBITS ========= */
+/* ========= ICONS ========= */
 .orbits {
   position: absolute;
   inset: 0;
@@ -100,47 +104,32 @@ body {
   animation: spin 3s linear infinite;
 }
 
-/* Glow trail */
-.orbit::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  border-radius: 50%;
-  box-shadow:
-    0 0 40px rgba(236,72,153,0.35),
-    inset 0 0 30px rgba(236,72,153,0.25);
-  opacity: 0.6;
-}
+.orbit:nth-child(1) { animation-delay: 0s; }
+.orbit:nth-child(2) { animation-delay: -0.4s; }
+.orbit:nth-child(3) { animation-delay: -0.8s; }
+.orbit:nth-child(4) { animation-delay: -1.2s; }
+.orbit:nth-child(5) { animation-delay: -1.6s; }
+.orbit:nth-child(6) { animation-delay: -2s; }
+.orbit:nth-child(7) { animation-delay: -2.4s; }
+.orbit:nth-child(8) { animation-delay: -2.8s; }
 
-/* ========= ICON ========= */
 .icon {
   position: absolute;
   top: 50%;
   left: 50%;
   font-size: 2.9rem;
-  transform: translate(190px, -50%);
-  color: #fff;
+  transform: translate(190px, -50%); /* ORBIT DISTANCE INCREASED */
+  color: #ffffff;
   text-shadow:
     0 0 14px rgba(236,72,153,0.9),
-    0 0 34px rgba(236,72,153,0.6);
-  transition: transform 0.6s cubic-bezier(.2,1.4,.4,1);
+    0 0 34px rgba(236,72,153,0.65);
 }
-
-/* SNAP POSITIONS */
-.snap .orbit:nth-child(1) .icon { transform: translate(0,-220px); }
-.snap .orbit:nth-child(2) .icon { transform: translate(155px,-155px); }
-.snap .orbit:nth-child(3) .icon { transform: translate(220px,0); }
-.snap .orbit:nth-child(4) .icon { transform: translate(155px,155px); }
-.snap .orbit:nth-child(5) .icon { transform: translate(0,220px); }
-.snap .orbit:nth-child(6) .icon { transform: translate(-155px,155px); }
-.snap .orbit:nth-child(7) .icon { transform: translate(-220px,0); }
-.snap .orbit:nth-child(8) .icon { transform: translate(-155px,-155px); }
 
 /* ========= ANIMATIONS ========= */
 @keyframes logoReveal {
-  0% { opacity: 0; transform: scale(0.45); }
-  70% { opacity: 1; transform: scale(1.1); }
-  100% { transform: scale(1); }
+  0%   { opacity: 0; transform: scale(0.45); }
+  70%  { opacity: 1; transform: scale(1.1); }
+  100% { opacity: 1; transform: scale(1); }
 }
 
 @keyframes fadeUp {
@@ -166,7 +155,8 @@ body {
 
   <div class="center">
 
-    <div class="orbits" id="orbits">
+    <!-- ICONS -->
+    <div class="orbits">
       <div class="orbit"><span class="icon">🌐</span></div>
       <div class="orbit"><span class="icon">💼</span></div>
       <div class="orbit"><span class="icon">🎬</span></div>
@@ -177,6 +167,7 @@ body {
       <div class="orbit"><span class="icon">🍔</span></div>
     </div>
 
+    <!-- LOGO -->
     <div class="logo-wrap">
       <div class="logo">HD</div>
       <div class="tagline">Family First · One Place for Everything</div>
@@ -186,22 +177,12 @@ body {
 </div>
 
 <script>
-/* SLOW DOWN */
-setTimeout(() => {
-  document.querySelectorAll(".orbit").forEach(o => {
-    o.style.animationDuration = "8s";
-  });
-}, 5000);
-
-/* STOP + SNAP */
 setTimeout(() => {
   document.querySelectorAll(".orbit").forEach(o => {
     o.style.animationPlayState = "paused";
   });
-  document.getElementById("orbits").classList.add("snap");
-}, 7800);
+}, 9200);
 
-/* MOVE TO APP */
 setTimeout(() => {
   sessionStorage.setItem("harDilSplash", "done");
   window.location.replace("index.html");
