--- a/about.html
+++ b/about.html
@@ -10,51 +10,34 @@
 
 <header class="hero">
   <h1>About HarDil</h1>
-  <p>Family First · One Place for Everything</p>
 </header>
 
 <main class="app">
+  <section class="card">
+    <p>
+      <strong>HarDil</strong> is a family-inspired digital platform created to bring
+      commonly used and trusted services together in one place.
+    </p>
 
-<section class="card">
-  <h2>❤️ Our Story</h2>
-  <p>
-    HarDil begins with a simple belief — we are all family.
-    Just like two people meet, shake hands, and hug each other,
-    this app represents trust, unity, and responsibility.
-  </p>
-  <p>
-    In HarDil, users are not customers.
-    We are all part of one digital family.
-  </p>
-</section>
+    <p>
+      The name <strong>HarDil</strong> is derived from two names — <strong>Hari</strong> and
+      <strong>Dileep</strong>. It also aligns with the meaningful word
+      <em>Hardil / Hardial</em>, which represents courage, unity, and divine favor.
+    </p>
 
-<section class="card" id="motive">
-  <h2>🎯 Motive & Vision</h2>
-  <p>
-    Today, mobile devices are overloaded with applications that consume
-    storage, distract users, and make simple tasks complicated.
-  </p>
-  <p>
-    HarDil solves this by organizing essential services section-wise
-    and redirecting users only to official websites.
-    This reduces storage usage and keeps digital life simple.
-  </p>
-</section>
+    <p>
+      Just like a family where people may have different thoughts and preferences
+      yet stay together, HarDil brings different applications together under one
+      platform while respecting individuality and choice.
+    </p>
 
-<section class="card">
-  <h2>🇮🇳 Built for Indian Users</h2>
-  <p>
-    HarDil is designed keeping Indian users in mind,
-    with commonly used and trusted services presented
-    in a clean, user-friendly manner.
-  </p>
-</section>
-
+    <p>
+      HarDil does not create, clone, embed, or modify any third-party applications.
+      It simply redirects users to official websites, allowing them to log in and
+      use services securely through their own browser.
+    </p>
+  </section>
 </main>
-
-<footer class="footer">
-  Contact: <strong>aghari128@gmail.com</strong>
-</footer>
 
 </body>
 </html>
